@@ -599,7 +599,7 @@ attribute_hidden FUNTAB R_FunTab[] = {
     {"loadFromConn2", do_loadFromConn2, 0, 111, 2, {PP_FUNCALL, PREC_FN, 0}},
     {"serializeToConn", do_serializeToConn, 0, 111, 5, {PP_FUNCALL, PREC_FN, 0}},
     {"unserializeFromConn", do_unserializeFromConn, 0, 111, 2, {PP_FUNCALL, PREC_FN, 0}},
-    {"deparse", do_deparse, 0, 11, 4, {PP_FUNCALL, PREC_FN, 0}},
+    {"deparse", do_deparse, 0, 11, 5, {PP_FUNCALL, PREC_FN, 0}},
     {"dput", do_dput, 0, 111, 3, {PP_FUNCALL, PREC_FN, 0}},
     {"dump", do_dump, 0, 111, 5, {PP_FUNCALL, PREC_FN, 0}},
     {"substitute", do_substitute, 0, 0, -1, {PP_FUNCALL, PREC_FN, 0}},
